Changelog
=========

1.9.1 (unreleased)
------------------

- Add uninstall profile [raphael-s]


1.9.0 (2017-02-09)
------------------

- Update font-awesome to 4.7.0.
  [elioschmutz]


1.8.2 (2017-01-11)
------------------

- 1.8.1 was accidentally released from the wrong branch. Please use 1.8.2 instead.
  [Kevin Bieri]

- Use two columns for print layout.
  [Kevin Bieri]

- Avoid duplicate (mimetype) icons on "Image" types. [jone]

- Introduce new mixins

  - Introduce link-color helper
  - Introduce font-face helper
  - Introduce rem helper

  [Kevin Bieri]


1.8.0 (2016-10-06)
------------------

- Switch from "private" to "public" caching, since the CSS does
  not contain any user specific data. [jone]

- Fix caching for unpublished navigation roots by not using p.a.caching. [jone]

- Introduce appearance helper
  [Kevin Bieri]


1.7.1 (2016-09-26)
------------------

- Support replacing portal-type- and mimetype-icons. [jone]

- Fix support for mimetype icons having long names. [jone, mbaechtold]


1.7.0 (2016-09-22)
------------------

- Fix multi-fill support of embed-resource mixin,
  introducing a new syntax and signature. [Kevin Bieri]


1.6.1 (2016-08-08)
------------------

- Reduce tab hover state
  The current hover state will be always the selected state
  [Kevin Bieri]


1.6.0 (2016-07-18)
------------------

- Move zindex system from plonetheme.blueberry
  [Kevin Bieri]


1.5.2 (2016-07-06)
------------------

- Use font family definitions from plonetheme.blueberry
  [Kevin Bieri]


1.5.1 (2016-06-23)
------------------

- Support selected state of tab-list on link (a tag) too.
  [mathias.leimgruber]

- ie-only slector now supports ms edge and IE11.
  [raphael-s]


1.5.0 (2016-05-26)
------------------

- Introduce spinner mixin.
  [Kevin Bieri]


1.4.0 (2016-05-24)
------------------

- Introduce ie-only mixin.
  [Kevin Bieri]


1.3.0 (2016-05-20)
------------------

- Extend list-group mixin interface to configure the hover color.