@@ -6,6 +6,9 @@ Changelog
 
 - Add uninstall profile [raphael-s]
 
+- Make sure the default profile is installed when installing ftw.theming with
+  quickinstaller. [raphael-s]
+
 
 1.9.0 (2017-02-09)
 ------------------
